# demo-rocket

./: .env  .env.example  Cargo.toml  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: cors.rs  database.rs  lib.rs  openapi_spec.rs  response_structs.rs
api/src/profile_controllers/: create_profile_controller.rs  get_profile_by_id_controller.rs  get_profiles_controller.rs  mod.rs
api/src/profile_router/: create_profile_route.rs  delete_profile_route.rs  get_profile_by_id.rs  get_profiles_route.rs  mod.rs  update_profile_route.rs
api/src/views/: hello_rocket_view.rs  mod.rs
api/templates/: index.html.hbs
entity/: Cargo.toml
entity/src/: lib.rs  profile.rs
migration/src/: lib.rs  m20230716_203443_create_profile_table.rs
src/: database.rs  main.rs  profile_router.rs
src/profile_router/: create_profile_route.rs  delete_profile_route.rs  get_profile_by_id.rs  get_profile_route.rs  get_profiles_route.rs  mod.rs  update_profile_route.rs
