[package]
name = "demo-rocket-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_okapi={ version = "0.8.0-rc.3", features = ["swagger", "rapidoc"] }
# rocket_cors = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.11.3", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
sea-orm-rocket = { version = "0.5.2",features = ["rocket_okapi"] }
async-trait = { version = "0.1" }
dotenvy = "0.15.7"
tokio = "1.20.0"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars"]

[dependencies.rocket_cors]
git = "https://github.com/lawliet89/rocket_cors.git"
rev = "54fae070"
default-features = false